# FEA-viewer

./: CMakeLists.txt  README.md  Update.md  build.py  check_dependencies.py  copy_vtk_dlls.cmake  create_beautiful_3d_data.py  create_test_data.py  helical_structure.vtu  main.py  radial_sphere.vtu  run.py  test_cmake.py  test_compile.cpp  test_data.vtk  test_data.vtu  torus_vortex.vtu  twisted_cylinder.vtu
src/: MainWindow.cpp  MainWindow.h
src/interaction/: DataPicker.cpp  DataPicker.h
src/visualization/: ClippingWidget.cpp  ClippingWidget.h  ContourWidget.cpp  ContourWidget.h  VectorFieldWidget.cpp  VectorFieldWidget.h
